--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord bot by FANTOME000",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,18 +17,6 @@
   },
   "homepage": "https://github.com/FANTOME000/-ShieldingBot#readme",
   "dependencies": {
-    "btc": "^0.0.4",
-    "btc-value": "^1.3.0",
-    "ccxt": "^1.10.531",
-    "coin-hive": "^1.10.0",
-    "discord.js": "^11.2.1",
-    "discord.js-musicbot-addon": "^1.8.2",
-    "embed-creator": "^1.2.3",
-    "embed-video": "^2.0.0",
-    "ffmpeg": "0.0.4",
-    "googleapis": "^23.0.2",
-    "ltc": "^0.0.4",
-    "request": "^2.83.0",
-    "restify": "^6.3.4"
+    "discord.js": "^11.2.1"
   }
 }
