--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/FANTOME000/-ShieldingBot.git"
   },
+  "engines": {
+    "node": "5.0.0",
+    "npm": "4.6.1"
+  },
   "author": "FANTOME000",
   "license": "ISC",
   "bugs": {
