--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/FANTOME000/-ShieldingBot#readme",
   "dependencies": {
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.2.1",
+    "node-opus": "^0.2.4",
+    "request": "^2.79.0",
+    "ytdl-core": "^0.7.21"
   }
 }
